--- a/1_A360_EL/1_A360_EL.ipynb
+++ b/1_A360_EL/1_A360_EL.ipynb
@@ -5,12 +5,12 @@
    "name": "streamlit"
   },
   "lastEditStatus": {
-   "notebookId": "gowdfxoha2votja4czst",
+   "notebookId": "u3yi6qsejkdrnza47nhh",
    "authorId": "8432959774263",
    "authorName": "DMITRI",
    "authorEmail": "dmitridbx@gmail.com",
-   "sessionId": "c4867ba9-9899-40e8-bb2f-2c6c84018cd1",
-   "lastEditTime": 1744322966823
+   "sessionId": "0fd70bb5-3d42-4b05-bb17-f7f5361e20c3",
+   "lastEditTime": 1744336517139
   }
  },
  "nbformat_minor": 5,
@@ -32,7 +32,7 @@
     "language": "python",
     "name": "ImportPackages"
    },
-   "source": "###################################################################################################\n# Import Snowpark Package and a few Functions and Types\n###################################################################################################\nimport snowflake.snowpark as snowpark\nimport yaml\nfrom snowflake.snowpark.functions import col\nfrom snowflake.snowpark.types import StructField, StructType, IntegerType, StringType, TimestampType, DoubleType, DateType, FloatType\nfrom snowflake.core.stage import Stage\n",
+   "source": "###################################################################################################\n# Import Snowpark Package and a few Functions and Types\n###################################################################################################\nimport snowflake.snowpark as snowpark\nimport yaml\nimport snowflake\nimport snowflake.core\nfrom snowflake.snowpark.functions import col\nfrom snowflake.snowpark.types import StructField, StructType, IntegerType, StringType, TimestampType, DoubleType, DateType, FloatType\nfrom snowflake.core.stage import Stage\n",
    "execution_count": null,
    "outputs": []
   },
@@ -40,7 +40,7 @@
    "cell_type": "markdown",
    "id": "48bab937-38d8-4708-bbd3-d793311beaa8",
    "metadata": {
-    "name": "HeaderLoadFromConfigurationFile",
+    "name": "HeaderLoadFromConfig",
     "collapsed": false
    },
    "source": "2. Load Parameters from yml file"
@@ -53,7 +53,7 @@
     "name": "LoadParameters"
    },
    "outputs": [],
-   "source": "###################################################################################################\n# Load parameters\n###################################################################################################\n# Open and read the YAML file\nwith open('environment.yml', 'r') as file:\n    params = yaml.safe_load(file)\n\n# Access parameters\nstage_path = params['stage_path']\ntrain_file = params['train_file']\nweather_file = params['weather_file']",
+   "source": "###################################################################################################\n# Load parameters\n###################################################################################################\n# Open and read the YAML file\nwith open('environment.yml', 'r') as file:\n    params = yaml.safe_load(file)\n\n# Access parameters\nstage_path = params['stage_path']\ntrain_file = params['train_file']\ntest_file = params['test_file']\nweather_file = params['weather_file']",
    "execution_count": null
   },
   {
@@ -73,7 +73,18 @@
     "name": "Stage"
    },
    "outputs": [],
-   "source": "##################################################################################################\n# Create database, schema and prepare external stage\n###################################################################################################\nCREATE DATABASE IF NOT EXISTS NY_TAXI_DATA;\nCREATE SCHEMA IF NOT EXISTS NY_TAXI_DATA.RAW;\nCREATE SCHEMA IF NOT EXISTS NY_TAXI_DATA.PROCESS;\nCREATE OR ALTER FILE FORMAT csv_format TYPE = CSV skip_header = 1;\nCREATE STAGE IF NOT EXISTS NY_TAXI_DATA.PROCESS.S3_STAGE_TAXI STORAGE_INTEGRATION = S3INTEGRATION URL = stage_path FILE_FORMAT = csv_format;",
+   "source": "--##############################################################################################\n-- Create database, schema and prepare external stage\n--################################################################################################\nCREATE DATABASE IF NOT EXISTS NY_TAXI_DATA;\nCREATE SCHEMA IF NOT EXISTS NY_TAXI_DATA.RAW;\nCREATE SCHEMA IF NOT EXISTS NY_TAXI_DATA.PROCESS;\nCREATE OR ALTER FILE FORMAT csv_format TYPE = CSV skip_header = 1;\n--CREATE STAGE IF NOT EXISTS NY_TAXI_DATA.PROCESS.S3_STAGE_TAXI STORAGE_INTEGRATION = S3INTEGRATION URL = stage_path FILE_FORMAT = csv_format;",
+   "execution_count": null
+  },
+  {
+   "cell_type": "code",
+   "id": "066b8238-c9dd-45c5-a95a-6d2d9dbd674e",
+   "metadata": {
+    "language": "python",
+    "name": "cell1"
+   },
+   "outputs": [],
+   "source": "from snowflake.snowpark.context import get_active_session\ncreate_stage_query = 'CREATE STAGE IF NOT EXISTS NY_TAXI_DATA.PROCESS.S3_STAGE_TAXI STORAGE_INTEGRATION = S3INTEGRATION URL = \"' + stage_path + '\" FILE_FORMAT = csv_format;'\nprint(create_stage_query)\nsession = get_active_session()\nsession.sql(create_stage_query).collect()",
    "execution_count": null
   },
   {
@@ -90,10 +101,21 @@
    "id": "fa2d003c-ae31-4c49-9dc7-3bf57776bfa2",
    "metadata": {
     "language": "python",
-    "name": "IngestTaxiDataFromStageToTable"
+    "name": "IngestTaxiData"
    },
    "outputs": [],
-   "source": "###################################################################################################\n# Load data from external stage into raw layer\n###################################################################################################\nfrom snowflake.snowpark.context import get_active_session\nsession = get_active_session()\ntaxi_data_schema =  StructType([StructField(\"id\",StringType()),\\\n                        StructField(\"vendor_id\",IntegerType()),\\\n                        StructField(\"pickup_datetime\",TimestampType()),\\\n                        StructField(\"dropoff_datetime\",TimestampType()),\\\n                        StructField(\"passenger_count\",IntegerType()),\\\n                        StructField(\"pickup_longitude\",DoubleType()),\\\n                        StructField(\"pickup_latitude\",DoubleType()),\\\n                        StructField(\"dropoff_longitude\",DoubleType()),\\\n                        StructField(\"dropoff_latitude\",DoubleType()),\\\n                        StructField(\"store_and_fwd_flag\",StringType(1)),\\\n                        StructField(\"trip_duration\",IntegerType())])\n\nsession.sql('DROP TABLE IF EXISTS NY_TAXI_DATA.RAW.TAXI_DATA;').collect()\n\n# Create a Dataframe from our taxi_data file from our stage\nfile_path=train_file\nstage_read_df = session.read.options({\n        \"skip_header\": 1\n    }).schema(taxi_data_schema).csv(file_path)\n\n# Save our Dataframe as a taxi_data table in our ny_taxi_data DB and Raw Schema\nstage_read_df.write.mode(\"overwrite\").save_as_table(\"NY_TAXI_DATA.RAW.TAXI_DATA\")\n",
+   "source": "###################################################################################################\n# Load data from external stage into raw layer\n###################################################################################################\ntaxi_data_schema =  StructType([StructField(\"id\",StringType()),\\\n                        StructField(\"vendor_id\",IntegerType()),\\\n                        StructField(\"pickup_datetime\",TimestampType()),\\\n                        StructField(\"dropoff_datetime\",TimestampType()),\\\n                        StructField(\"passenger_count\",IntegerType()),\\\n                        StructField(\"pickup_longitude\",DoubleType()),\\\n                        StructField(\"pickup_latitude\",DoubleType()),\\\n                        StructField(\"dropoff_longitude\",DoubleType()),\\\n                        StructField(\"dropoff_latitude\",DoubleType()),\\\n                        StructField(\"store_and_fwd_flag\",StringType(1)),\\\n                        StructField(\"trip_duration\",IntegerType())])\n\nsession.sql('DROP TABLE IF EXISTS NY_TAXI_DATA.RAW.TAXI_DATA;').collect()\n\n# Create a Dataframe from our taxi_data file from our stage\nfile_path=train_file\nstage_read_df = session.read.options({\n        \"skip_header\": 1\n    }).schema(taxi_data_schema).csv(file_path)\n\n# Save our Dataframe as a taxi_data table in our ny_taxi_data DB and Raw Schema\nstage_read_df.write.mode(\"overwrite\").save_as_table(\"NY_TAXI_DATA.RAW.TAXI_DATA\")\n",
+   "execution_count": null
+  },
+  {
+   "cell_type": "code",
+   "id": "1206b528-8547-4595-bbe1-fb4dff201601",
+   "metadata": {
+    "language": "python",
+    "name": "IngestTaxiTestData"
+   },
+   "outputs": [],
+   "source": "##################################################################################################\n# Load test taxi data from external stage into raw layer\n###################################################################################################\nsession = get_active_session()\ntaxi_test_data_schema =  StructType([StructField(\"id\",StringType()),\\\n                        StructField(\"vendor_id\",IntegerType()),\\\n                        StructField(\"pickup_datetime\",TimestampType()),\\\n                       # StructField(\"dropoff_datetime\",TimestampType()),\\\n                        StructField(\"passenger_count\",IntegerType()),\\\n                        StructField(\"pickup_longitude\",DoubleType()),\\\n                        StructField(\"pickup_latitude\",DoubleType()),\\\n                        StructField(\"dropoff_longitude\",DoubleType()),\\\n                        StructField(\"dropoff_latitude\",DoubleType()),\\\n                        StructField(\"store_and_fwd_flag\",StringType())])\n\nsession.sql('DROP TABLE IF EXISTS NY_TAXI_DATA.RAW.TAXI_DATA_TEST;').collect()\n# Create a Dataframe from our test file from s3 stage\nfile_path=test_file\nstage_read_df = session.read.options({\n        \"skip_header\": 1\n    }).schema(taxi_test_data_schema).csv(file_path)\n\n# Save our Dataframe as a taxi_data table in our ny_taxi_data DB and Raw Schema\nstage_read_df.write.mode(\"overwrite\").save_as_table(\"NY_TAXI_DATA.RAW.TAXI_DATA_TEST\")",
    "execution_count": null
   },
   {
@@ -101,10 +123,10 @@
    "id": "cd50a783-3067-4091-bff8-c6ddd2fba996",
    "metadata": {
     "language": "python",
-    "name": "IngestWeatherDataFromStageToTable"
+    "name": "IngestWeatherData"
    },
    "outputs": [],
-   "source": "###################################################################################################\n# Load weather data \n###################################################################################################\nfrom snowflake.snowpark.context import get_active_session\nsession = get_active_session()\ntaxi_data_schema =  StructType([StructField(\"date\",StringType()),\\\n                    StructField(\"maximum_temperature\",IntegerType()),\\\n                    StructField(\"minimum_temperature\",IntegerType()),\\\n                    StructField(\"average_temperature\",FloatType()),\\\n                    StructField(\"precipitation\",StringType()),\\\n                    StructField(\"snow_fall\",StringType()),\\\n                    StructField(\"snow_depth\",StringType())                      ])\nsession.sql('DROP TABLE IF EXISTS NY_TAXI_DATA.RAW.WEATHER;').collect()\nfile_path=weather_file\nstage_read_df = session.read.options({\n        \"skip_header\": 1\n    }).schema(taxi_data_schema).csv(file_path)\n\n# Save our Dataframe as a taxi_data table in our ny_taxi_data DB and Raw Schema\nstage_read_df.write.mode(\"overwrite\").save_as_table(\"NY_TAXI_DATA.RAW.WEATHER\")\n",
+   "source": "###################################################################################################\n# Load weather data from external stage\n###################################################################################################\nfrom snowflake.snowpark.context import get_active_session\nsession = get_active_session()\nweather_data_schema =  StructType([StructField(\"date\",StringType()),\\\n                    StructField(\"maximum_temperature\",IntegerType()),\\\n                    StructField(\"minimum_temperature\",IntegerType()),\\\n                    StructField(\"average_temperature\",FloatType()),\\\n                    StructField(\"precipitation\",StringType()),\\\n                    StructField(\"snow_fall\",StringType()),\\\n                    StructField(\"snow_depth\",StringType())])\nsession.sql('DROP TABLE IF EXISTS NY_TAXI_DATA.RAW.WEATHER;').collect()\nfile_path=weather_file\nstage_read_df = session.read.options({\n        \"skip_header\": 1\n    }).schema(weather_data_schema).csv(file_path)\n\n# Save our Dataframe as a taxi_data table in our ny_taxi_data DB and Raw Schema\nstage_read_df.write.mode(\"overwrite\").save_as_table(\"NY_TAXI_DATA.RAW.WEATHER\")\n",
    "execution_count": null
   }
  ]
