--- a/2_A360_T/2_A360_T.ipynb
+++ b/2_A360_T/2_A360_T.ipynb
@@ -22,8 +22,8 @@
    "authorId": "8432959774263",
    "authorName": "DMITRI",
    "authorEmail": "dmitridbx@gmail.com",
-   "sessionId": "3cff0aec-c113-479c-bf9f-96c6d57fb6ce",
-   "lastEditTime": 1744326939441
+   "sessionId": "cb87b183-c9d9-4371-977a-c63d24c1159a",
+   "lastEditTime": 1744337003016
   }
  },
  "nbformat_minor": 2,
@@ -1925,11 +1925,10 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "name": "cell35"
+    "name": "cell35",
+    "collapsed": false
    },
-   "source": [
-    "Now apply the same cleaning to the \"test.csv\" file, so that we don't have to do it later."
-   ],
+   "source": "Now apply the same cleaning to the test data from \"test.csv\" file, so that we don't have to do it later.",
    "id": "ce110000-1111-2222-3333-ffffff000034"
   },
   {
@@ -1940,7 +1939,7 @@
     "language": "python"
    },
    "outputs": [],
-   "source": "taxi_raw_df = session.table(\"NY_TAXI_DATA.RAW.TAXI_DATA\")\ntest = taxi_raw_df.to_pandas()",
+   "source": "#taxi_raw_df = session.table(\"NY_TAXI_DATA.RAW.TAXI_DATA\")\ntaxi_raw_test_df = session.table(\"NY_TAXI_DATA.RAW.TAXI_DATA_TEST\")\ntest = taxi_raw_test_df.to_pandas()",
    "id": "ce110000-1111-2222-3333-ffffff000035"
   },
   {
