--- a/3_A360_Analyze/3_A360_ANALYZE.ipynb
+++ b/3_A360_Analyze/3_A360_ANALYZE.ipynb
@@ -9,8 +9,8 @@
    "authorId": "8432959774263",
    "authorName": "DMITRI",
    "authorEmail": "dmitridbx@gmail.com",
-   "sessionId": "fa5c2acf-8ab8-45fc-9a98-d09f48687a65",
-   "lastEditTime": 1744326508028
+   "sessionId": "ea8144c8-e6ae-48bd-8a86-0235dab511ba",
+   "lastEditTime": 1744340990313
   }
  },
  "nbformat_minor": 5,
@@ -32,7 +32,7 @@
     "language": "python",
     "name": "PieChart"
    },
-   "source": "###################################################################################################\n# Import Snowpark Package and a few Functions\n###################################################################################################\nfrom snowflake.snowpark.context import get_active_session\nimport snowflake.snowpark.functions as f\nimport matplotlib.pyplot as plt\n\n# Load data from table into dataframe\nsession = get_active_session()\ntaxi_raw_df = session.table(\"NY_TAXI_DATA.RAW.TAXI_DATA\")\n\n# Aggregate = passenger count by vendor\ndf_group = taxi_raw_df.group_by(\"VENDOR_ID\").agg(f.sum(\"PASSENGER_COUNT\").alias(\"VENDOR_ID\"))\ndf_group.show()\n\n\n# Collect data into a Pandas DataFrame\nimport pandas as pd\ndata = df_group.collect()\ndf_pandas = pd.DataFrame(data, columns=['VENDOR_ID', 'PASSENGER_COUNT'])\n\n# Create the pie chart using Matplotlib\nimport matplotlib.pyplot as plt\n\nplt.pie(df_pandas['PASSENGER_COUNT'], labels=df_pandas['VENDOR_ID'], autopct='%1.1f%%')\nplt.title('Passenger count by Vendor')\nplt.show()",
+   "source": "###################################################################################################\n# Import Snowpark Package and a few Functions\n###################################################################################################\nfrom snowflake.snowpark.context import get_active_session\nimport snowflake.snowpark.functions as f\nimport matplotlib.pyplot as plt\n\n# Load data from table into dataframe\nsession = get_active_session()\ntaxi_raw_df = session.table(\"NY_TAXI_DATA.CLEAN.CLEAN_TRAIN\")\n\n# Aggregate = passenger count by vendor\ndf_group = taxi_raw_df.group_by(\"VENDOR_ID\").agg(f.sum(\"PASSENGER_COUNT\").alias(\"VENDOR_ID\"))\ndf_group.show()\n\n\n# Collect data into a Pandas DataFrame\nimport pandas as pd\ndata = df_group.collect()\ndf_pandas = pd.DataFrame(data, columns=['VENDOR_ID', 'PASSENGER_COUNT'])\n\n# Create the pie chart using Matplotlib\nimport matplotlib.pyplot as plt\n\nplt.pie(df_pandas['PASSENGER_COUNT'], labels=df_pandas['VENDOR_ID'], autopct='%1.1f%%')\nplt.title('Passenger count by Vendor')\nplt.show()",
    "execution_count": null,
    "outputs": []
   },
@@ -53,7 +53,18 @@
     "name": "cell2"
    },
    "outputs": [],
-   "source": "import numpy as np\nimport seaborn as sns\n\n# settings for seaborn plotting style\nsns.set(color_codes=True)\n# settings for seaborn plot sizes\nsns.set(rc={'figure.figsize':(5,5)})\n\n# aggregate, slicing by trip_duration\ndf_group2 = taxi_raw_df.group_by(\"trip_duration\").agg(f.count(\"trip_duration\").alias(\"tcount\")).order_by(\"trip_duration\").filter(\"trip_duration < 80000\").filter(\"tcount > 5\")\ndf_pandas2 = df_group2.to_pandas()\n\n# prepare bar chart\nsns.barplot(x='TRIP_DURATION',y='TCOUNT', data=df_pandas2, color='skyblue')\nplt.title('Trip duration distribution')\nplt.xlabel('Trip duration')\nplt.ylabel('Number of trips for the duration')\nplt.show()\n",
+   "source": "import numpy as np\nimport seaborn as sns\n\n# settings for seaborn plotting style\nsns.set(color_codes=True)\n# settings for seaborn plot sizes\nsns.set(rc={'figure.figsize':(5,5)})\n\n# aggregate, slicing by trip_duration\ndf_group2 = taxi_raw_df.group_by(\"trip_duration\").agg(f.count(\"trip_duration\").alias(\"tcount\")).order_by(\"trip_duration\").filter(\"trip_duration < 80000\").filter(\"tcount > 5\")\ndf_pandas2 = df_group2.to_pandas()",
+   "execution_count": null
+  },
+  {
+   "cell_type": "code",
+   "id": "d58469b8-fb1d-4633-b5b7-d6d61cfc50e2",
+   "metadata": {
+    "language": "python",
+    "name": "cell8"
+   },
+   "outputs": [],
+   "source": "# prepare bar chart\nfig, ax = plt.subplots()\nsns.barplot(x='TRIP_DURATION',y='TCOUNT', data=df_pandas2, edgecolor='skyblue')\nplt.title('Trip duration distribution')\nplt.xlabel('Trip duration')\nplt.ylabel('Number of trips for the duration')\nax.set_xticks([299, 1499, 2999])\nplt.show()",
    "execution_count": null
   },
   {
